fix(portal): scrollbar too big on tab list

--- a/portal/src/app.css
+++ b/portal/src/app.css
@@ -57,3 +57,12 @@
     @apply bg-background text-foreground;
   }
 }
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
